@@ -1,16 +1,22 @@
 package de.gtarc.opaca.platform.user;
 
+import java.time.Duration;
 import java.util.*;
 import java.util.stream.Collectors;
 
-import de.gtarc.opaca.model.Role;
+import com.google.common.base.Strings;
+import de.gtarc.opaca.model.User.Role;
 import de.gtarc.opaca.model.User;
+import de.gtarc.opaca.platform.auth.JwtUtil;
 import jakarta.annotation.PostConstruct;
 
 import de.gtarc.opaca.platform.PlatformConfig;
+import org.apache.commons.lang3.RandomStringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -36,6 +42,9 @@ public class TokenUserDetailsService implements UserDetailsService {
     @Autowired
     private PasswordEncoder passwordEncoder;
 
+    @Autowired
+    private JwtUtil jwtUtil;
+
 
     @PostConstruct
 	public void postConstruct() {
@@ -60,18 +69,54 @@ public class TokenUserDetailsService implements UserDetailsService {
         }
     }
 
+    public String generateTokenForUser(String username, String password) {
+        UserDetails userDetails = loadUserByUsername(username);
+        if (passwordEncoder.matches(password, userDetails.getPassword())) {
+            return jwtUtil.generateToken(username, Duration.ofHours(1));
+        } else {
+            throw new BadCredentialsException("Wrong password");
+        }
+    }
+
     /**
      * Adding a new user to the UserRepository. Users can be human [username, password, roles, privileges]
      * or containers [containerID, password(random), roles, privileges]
      * If a User already exists, throw an exception
      */
-    public void createUser(String username, String password, Role role, List<String> privileges) {
+    public User createUser(String username, String password, Role role, List<String> privileges) {
         if (userRepository.findByUsername(username) != null) {
             throw new UserAlreadyExistsException(username);
         } else {
-            User user = new User(username, passwordEncoder.encode(password), role, privileges != null ? privileges : new ArrayList<>());
+            // checked here and not via @NotNull since they can be null for PUT
+            if (username == null || password == null || role == null) {
+                throw new IllegalArgumentException("Username, Password and Role must be provided.");
+            }
+            User user = new User(username, passwordEncoder.encode(password), role, privileges != null ? privileges : new ArrayList<>(), new HashMap<>());
             userRepository.save(user);
+            return user;
         }
+    }
+
+    /**
+     * Create a temporary sub-user, derived from the user of the current request, to be used by
+     * Containers started or other Runtime Platforms connected by that user.
+     *
+     * @param username the name of the new user to be created
+     * @param owner the name of the user creating the new user (ignored if no auth)
+     */
+    public User createTempSubUser(String username, String owner) {
+        if (config.requireAuth && ! Strings.isNullOrEmpty(owner)) {
+            return createUser(username, generateRandomPwd(), getUserRole(owner), getUserPrivileges(owner));
+        } else {
+            return createUser(username, generateRandomPwd(), Role.USER, null);
+        }
+    }
+
+    /**
+     * Creates a random String of length 24 containing upper and lower case characters and numbers
+     */
+    public String generateRandomPwd() {
+        return RandomStringUtils.random(24, true, true);
     }
 
     /**
@@ -87,8 +132,8 @@ public class TokenUserDetailsService implements UserDetailsService {
     /**
      * Return all users in the UserRepository
      */
-    public List<String> getUsers() {
-        return userRepository.findAll().stream().map(User::toString).collect(Collectors.toList());
+    public List<User> getUsers() {
+        return userRepository.findAll().stream().toList();
     }
 
     /**
@@ -97,9 +142,6 @@ public class TokenUserDetailsService implements UserDetailsService {
      * If the user does not exist, throw exception.
      */
     public Boolean removeUser(String username) {
-        if (! userRepository.existsByUsername(username)) {
-            throw new UsernameNotFoundException(username);
-        }
         return userRepository.deleteByUsername(username);
     }
 
@@ -109,24 +151,27 @@ public class TokenUserDetailsService implements UserDetailsService {
      * If privileges are set, ALL privileges of the user will be replaced with the new list.
      * Return the updated user.
      */
-    public String updateUser(String username, String newUsername, String password, Role role,
-                             List<String> privileges) {
+    public User updateUser(String username, String newUsername, String password, Role role, List<String> privileges) {
+        // get user to be updated
         User user = userRepository.findByUsername(username);
-        if (user == null) throw new UsernameNotFoundException(username);
-        if (userRepository.findByUsername(newUsername) != null &&
-                !Objects.equals(username, newUsername)) throw new UserAlreadyExistsException(newUsername);
+        if (user == null) {
+            throw new UsernameNotFoundException(username);
+        }
+        // update username? check for conflict
+        if (newUsername != null && ! Objects.equals(username, newUsername)) {
+            if (userRepository.existsByUsername(newUsername)) {
+                throw new UserAlreadyExistsException(newUsername);
+            }
+            user.setUsername(newUsername);
+        }
+        // update remaining attributes
         if (password != null) user.setPassword(passwordEncoder.encode(password));
         if (role != null) user.setRole(role);
         if (privileges != null) user.setPrivileges(privileges);
-        if (newUsername != null) {
-            user.setUsername(newUsername);
-            // If a new username (mongo ID) is given, the old entity should be deleted
-            userRepository.deleteByUsername(username);
-            // TODO what happens if the deletion or creation fails?
-            //  Updating should be atomic
-        }
+        // delete the old and save and get updated user
+        userRepository.deleteByUsername(username);
         userRepository.save(user);
-        return getUser(user.getUsername()).toString();
+        return getUser(user.getUsername());
     }
 
     /**
@@ -166,4 +211,56 @@ public class TokenUserDetailsService implements UserDetailsService {
             super("User with username '" + username + "' already exists!");
         }
     }
+
+    /**
+     * Checks if the current request user is either an admin (has full control over user management)
+     * or the request user is performing request on its own data
+     * @param username: Name of user which will get affected by request (NOT THE CURRENT REQUEST USER)
+     */
+    public boolean isAdminOrSelf(String username) {
+        var auth = SecurityContextHolder.getContext().getAuthentication();
+        var token = (String) auth.getCredentials();
+        UserDetails details = loadUserByUsername(jwtUtil.getUsernameFromToken(token));
+        if (details == null) return false;
+        return details.getAuthorities().stream().anyMatch(a -> a.getAuthority().equals(Role.ADMIN.role())) ||
+                details.getUsername().equals(username);
+    }
+
+    /**
+     * Returns Access Token associated with container, or null
+     */
+    public String getContainerToken(String username, String containerId) {
+        User user = userRepository.findByUsername(username);
+        if (user == null) throw new UsernameNotFoundException(username);
+        return user.getContainerLoginTokens().get(containerId);
+    }
+
+    /**
+     * Associate Access Token with container, overwrite existing if any
+     */
+    public void addContainerToken(String username, String containerId, String token) {
+        User user = userRepository.findByUsername(username);
+        if (user == null) throw new UsernameNotFoundException(username);
+
+        user.getContainerLoginTokens().put(containerId, token);
+        userRepository.deleteByUsername(username);
+        userRepository.save(user);
+    }
+
+    /**
+     * Deleted Access Token associated with container, return old token if existed, otherwise null
+     */
+    public String removeContainerToken(String username, String containerId) {
+        User user = userRepository.findByUsername(username);
+        if (user == null) throw new UsernameNotFoundException(username);
+        if (user.getContainerLoginTokens().containsKey(containerId)) {
+            var token = user.getContainerLoginTokens().remove(containerId);
+            userRepository.deleteByUsername(username);
+            userRepository.save(user);
+            return token;
+        } else {
+            return null;
+        }
+    }
+
 }
